# sql-inspector

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile.toml  README.md  eslint.config.js  index.js  package-lock.json  package.json  sql_inspector.d.ts  sql_inspector.js  sql_inspector_bg.wasm  sql_inspector_bg.wasm.d.ts
.github/workflows/: ci.yml
src/: lib.rs
test/: index.test.js
tools/: build.js
