[package]
name = "sql-inspector"
version = "0.1.0"
edition = "2021"
authors = ["Marco Piraccini <marco@platformatic.dev>"]
description = "Inspects SQL queries to identify the impacted tables/columns"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sqlparser = { version = "0.50.0", features = ["visitor"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
cargo-watch = "8.5.2"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false
strip = true
